constraint of status has been added and company sending in project